ecs-terraform/natgw.tf
resource "aws_nat_gateway" "natgw" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.public1.id

  depends_on = [aws_internet_gateway.main]

  tags = {
    Name = "${local.name_prefix}-natgw"
  }
}

resource "aws_route" "private_nat" {
  route_table_id         = aws_route_table.private_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.natgw.id

}
