ecs-terraform/public_route_table.tf
resource "aws_route_table" "public_route_table" {

  vpc_id = aws_vpc.main.id


  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "${var.app_name}-${var.environment}-public-route-table"
  }
}
